# kninfra

./: .gitignore  .ignore  .isort.cfg  .travis.yml  CHANGELOG.md  INSTALL.md  README.md  Vagrantfile  coding-style.txt  default.nix  flake.nix  install.sh  manage.py  pyproject.toml  setup.cfg  shell.nix
.github/workflows/: nix.yml
doc/ldap/: access.ldif  scheme.ldif
kn/: defaultSettings.py  manage.py  settings.example.py  settings_env.py  urls.py
kn/agenda/: entities.py  fetch.py  urls.py  views.py
kn/barco/: forms.py  urls.py  views.py
kn/base/: _random.py  backports.py  conf.py  context_processors.py  http.py  mail.py  models.py  runtime.py  storage.py  strings.py  template.py  text.py  urls.py  validators.py  views.py
kn/browser/: views.py
kn/events/: api.py  entities.py  forms.py  urls.py  views.py
kn/fotos/: api.py  entities.py  expiring_fifo_cache.py  forms.py  roots.py  urls.py  utils.py  views.py
kn/leden/: admin.py  (+19 more)
media/: agenda  base  events  fotos  leden  reglementen  static  subscriptions
nix/: default.nix  devshell.toml  hetzner.nix  infra.nix  nixpkgs.nix  puppet.js  tests.nix  users.toml  vm-host.key.b64  vm-host.key.pub  vm-ssh.key  vm-ssh.key.pub  vm-ssh.sh
protobufs/: Makefile
salt/: README.md  bootstrap-sankhara.sh  vagrant_minion_config
secrets/: google-oauth-key.json.age  mailman-rest-production.age  mailman-rest-staging.age  mailman-rest-vm.age  production.age  secrets.nix  staging.age  vm.age
utils/: _import.py  birthday-email.py  birthday-email.template  boekenlezers-git-update-hook.py  change-username.py  check-email.py  check-email.template  check-members.py  check-other.py  check.py  cilia.py  common.py  cum-membership.py  daan.py  detailedList.py  dump.py  export-vcards.py  fools-email.py  forum-email.py  gen-dot.py  gen-sync.py  giedo-sync.py  giedo.py  hans.py  import-ledenlijst.py  initials.py  list-by-study.py  member-list.py  membership.py  microservice.py  moniek.py  prepare-for-the-next-year.py  restore-from-old.py  restore.py  rimapd.py  saldo.py  scan-fotos.py  set-photo.py  shell.py  telefoonlijst.py  (+4 more)
(+571 files in other folders)
