[tool.poetry]
name = "kninfra"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sdnotify = "^0.3.2"
reserved = "^0.1.1"
zipseeker = "^1.0.11"
django = "^1.11.29"
docutils = "^0.17.1"
tarjan = { git = "https://github.com/bwesterb/py-tarjan.git" }
#koert = { git = "https://github.com/awesterb/koert.git" }
msgpack-python = "^0.5.6"

hatchling = "1.13.0"
pytest = "*"
urllib3 = "^1.26.14"

# match with nixpkgs to keep patch intact in kndjango.nix
GitPython = "3.1.43"
mailman = "3.3.9"

pymongo = "^3.12.0"
grpcio = "^1.39.0"
protobuf = "^3.17.3"
Pillow = "^8.3.1"
html2text = "^2020.1.16"
Unidecode = "^1.2.0"
PyX = "^0.15"
Markdown = "3.3.4"
httplib2 = "^0.19.1"
oauth2client = "^4.1.3"
google-api-python-client = "^2.15.0"
ipython = "^7.28.0"
iso8601 = "^1.1.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
  "protobufs/"
]
target-version = "py39"
line-length = 105
